--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {},
     "autoload": {
         "psr-4": {
-            "just_test\\": "src"
+            "zacharyrankin\\just_test\\": "src"
         }
     }
 }
